<resources>
    <string name="app_name">Animal_Hospital_Finder</string>
    <string name="dialog_yes">예</string>
    <string name="dialog_no">아니오</string>
    <string name="dialog_keep">계속 실행합니다</string>
    <string name="dialog_title">앱 종료</string>
    <string name="close_message">앱을 종료하시겠습니까?</string>
    <string name="dialog_cls">앱을 종료합니다</string>
    <string name="previous">이전페이지</string>
    <string name="back">메인페이지</string>
    <string name="next">다음페이지</string>
    <string name="search">검색페이지</string>
    <string name="search_title">검색할 질병 입력</string>
    <string name="search_hint">앵무새 질병을 입력해주세요</string>
    <string name="help">도움이 되는 사이트 목록</string>
    <string name="click">(사이트 주소를 터치하면 해당 사이트로 이동합니다.)</string>
    <string name="birdpalace">버드팰리스: http://birdpalace.co.kr/</string>
    <string name="animaldoctor">애니멀닥터: http://animaldoctor.co.kr/</string>
    <string name="thezoo">더쥬: https://xn--9m1b023b.com/</string>
    <string name="petzzi">펫찌: http://www.petzzi.com/</string>
    <string name="notepet">노트펫: https://www.notepet.co.kr/</string>
    <string name="dailyvet">데일리벳: https://www.dailyvet.co.kr/</string>
    <string name="parrotcom">앵무새커뮤니티: https://cafe.naver.com/parrots4s/</string>
    <string name="engsamo">앵사모: https://cafe.naver.com/baekparrotlove/</string>
    <string name="parrotkingdom">앵무새왕국: https://cafe.naver.com/pkd7/</string>
    <string name="psamo">파사모: https://cafe.naver.com/reptilia</string>
    <string name="korrep">한국양서파충류학회: http://www.krsh.co.kr/</string>
    <string name="thezoocafe">더쥬네이버카페: https://cafe.naver.com/insectmaster</string>
    <string name="hamsterstory">햄스터스토리: https://cafe.naver.com/littleham</string>
    <string name="hamsamo">햄사모: https://cafe.naver.com/myfriendspet</string>
    <string name="hedge">가시버시-고슴도치사랑: https://cafe.naver.com/kasibersi</string>
    <string name="gisamo">기사모: https://cafe.naver.com/lovefhr</string>
    <string name="parrot">조류 질병</string>
    <string name="reptile">파충류 질병</string>
    <string name="rodent">소형 포유류 질병</string>
    <string name="parrot_info1">설사: 증상으로는 묽은 설사, 녹색 설사, 끈적끈적한 변 등이 나타납니다. 여름에 물이나 모이가 부패되었을 경우, 썩은 야채를 주었을 경우, 부적합한 먹이공급, 평소에 먹지 않던 음식들을 먹은 경우에
        생깁니다. 치료는 부드러운 물수건으로 항문을 닦아주고 새장을 따뜻한 곳으로 옮긴 후에 설파제를 물에 3-6방울 정도 섞어서 투약하면 됩니다.</string>
    <string name="parrot_info2">식체: 증상으로는 부풀어 오른 가슴, 모이를 잘 먹지 못함, 거친 호흡, 구토 등이 나타납니다. 새는 모이를 모아서 저장해놓는 소낭이라는 것이 있는데 새의 식도중간에 부풀어 있는 부분이 바로 소낭입니다.
        이 소낭에 모이가 걸려있을 경우 새가 급체를 하게 됩니다. 모이 배합 혹은 모이의 종류를 갑자기 변경했을 경우에 잘 생기는데 간혹 새가 너무 급하게 먹어서 생기는 경우도 있습니다. 경미한 경우 미지근한 물에 포도주 3-4방울을 섞어 스포이드로 먹이고
        소낭을 복부 쪽으로 문질러 걸려있는 모이를 이동시킵니다. 중증일 경우 소낭을 절개하여 뭉쳐진 모이를 꺼내야 합니다(수의사와 상담요망).</string>
    <string name="parrot_info3">변비: 증상으로는 굳은 변, 항문을 상하로 흔드는 것 등이 나타납니다. 원인으로는 지방과다, 물부족, 갑작스런 모이변경, 부적합한 모이, 운동부족 등이 있으며
        치료는 스포이드로 올리브유를 1-2방울 먹이고 중증인 경우에는 항문에도 두 방울 넣어주도록 합니다.</string>
    <string name="parrot_info4">장염: 증상으로는 설사도 나타나지만 일반적인 설사와는 다르게 항문주위가 더러움, 갈증, 식욕부진, 깃털이 부풀어있는 점도 같이 나타납니다.이는 세균 감염, 갑작스런 추위, 찬바람, 불결한 모이, 심한 스트레스, 공포로 인해 생기며
        치료는 세균감염이 원인일 때에는 항생제를 투여하도록 하고 세균에 의한 것이 아닐 경우 당분간 야채를 주지말고 신선한 모이와 물을 공급하며 보온에 신경을 쓰도록 합니다.</string>
    <string name="parrot_info5">소낭염: 증상으로는 점액성 구토 및 소화불량이 나타납니다. 원인으로는 감염 병원체, 새에게는 해로운 사람이 쓰는 화학 물질, 영양 불균형 등이 있습니다.
        치료는 세균이 원인일 경우 항생제와 비타민제를 하루 세 번 투여하며 부드러운 모이와 신선한 야채를 공급해주도록 합니다.</string>
    <string name="parrot_info6">감기 및 기관지염: 증상으로는 재채기, 콧물, 눈물, 빠른 호흡이 있으며 깃털을 부풀린 채 웅크리고 있는 모습을 보이기도 합니다. 사람의 감기와 같이찬바람에 많이 노출되거나 추운 날씨에 수욕했을 경우에 걸리기 쉽습니다.
치료는 온도를 따뜻하게 유지해주며 콧구멍이 막혀있을 경우 부드러운 물수건으로 닦아주고 물에 포도주를 조금 섞어서 스포이드로 먹입니다. 또한 설파제를 물에 섞어서 투여해줍니다.</string>
    <string name="parrot_info7">아스페르길루스증: 누룩곰팡이의 일종인 아스페르길루스 곰팡이가 증식해서 생기는 병입니다. 증상으로는 가쁜 호흡이 나타납니다. 또한 특이한 점으로 입 속을 보면 하얀 치즈 같은 것이 붙어있는데 이는 아스페리길루스 곰팡이가 증식한 것입니다.
        아스페르길루스 곰팡이가 기낭이나 폐에 번식했기 때문에 생기는 병입니다. 치료는 곰팡이에 잘 듣는 오레오마이신등을 물에 녹여 분무하는 방식으로 흡입 시켜줍니다.</string>
    <string name="parrot_info8">편모충증: 목구멍안쪽에 치즈같은 것이 뭉쳐져 있고 이것으로 인해 먹이를 먹는데 곤란을 겪는 증상을 보입니다. 입으로 전염되는 원생동물의 일종인 트리코모나스 원충이 원인입니다.
        치료는 다른 새들과 같이 키우는 경우 전염을 막기 위해 아픈 새를 격리시켜 보온하고 100cc의 물에 과망간산칼륨 1-2mg을 희석해서 주도록 합니다. 그리고 설파제를 물에 조금 타서 먹여주도록 합니다.</string>
    <string name="parrot_info9">조류 콕시듐증: 주로 어린 새에게 많이 나타납니다. 먹는 것에 비해 살이 찌지 않는 증상을 보이고 장의 문제로 인해 변비 또는 설사를 하거나 심할 경우 죽는 수도 있습니다.
        콕시듐 원충이 장관에 기생하여 발병합니다. 설파제를 물에 타서 먹이고 동물병원에서 치료를 받도록 합니다. 또한 콕시듐 원충의 알은 배설물을 통해 전염되므로 여러 새들을 키우는 경우
        아픈 새를 격리 후 치료하고 새장 주변을 완전히 소독해야 합니다.</string>
    <string name="parrot_info10">알막힘: 깃털을 부풀린채 웅크리고 있으며 새의 하복부가 막힌 알로 부풀어 있는 증상을 보입니다. 주로 잉꼬나 모란앵무와 같이 작은 새에게서 자주 보이며 그대로 방치하면 총배설강으로 이뤄진 새의
        배설계 구조 특징상 변도 보지 못하고 그대로 죽게됩니다. 주로 수난관의 혈액장애, 칼슘부족, 연동작용부족, 갑작스런 추위가 원인입니다. 치료는 온도를 따뜻하게 해주고 물과 포도주 2:1의 용액을 3-4방울 먹이도록 합니다.
        그리고 30분정도 알낳기를 기다리다가 그래도 낳지 못하면 스포이드로 올리브유등을 항문에 넣고 배란을 촉진 시키기 위하여 복부를 문질러줍니다.</string>
    <string name="parrot_info11">개선증(옴): 잉꼬에게 흔하게 발견되며 부리주변 또는 눈주위 등의 피부가 딱지처럼 두터워지는 증상을 보입니다. 이 증상이 심해지면 부리의 표면이 거칠어지며 눈 주위의 깃털도 빠지고 하얀 딱지가 생기며 가려워서 긁는 모습을 보입니다.
        옴진드기라 불리는 개선충이 피부에 기생하여 발합니다. 다른 새들과 같이 키우는 경우 옴진드기의 전염성이 강하므로 아픈 새를 격리시키고 새장을 열탕 소독해야 합니다. 치료는 면봉에 유황제 또는 페니실린 연고나 오이락스 연고를 환부에 바르도록 하고 이를 하루에 3회 일주일동안 반복합니다.</string>
    <string name="parrot_info12">탈모증: 드문드문 털이 빠지거나 완전히 탈모가 되는 증상을 보입니다. 근친번식에 의한 탈모는 깃털의 뿌리가 검게 보입니다. 또한 왕관앵무의 경우 근친으로 나온 개체는 우관이 없고 우관이 있을 자리에 깃털이 없는 증상을 보이기도 합니다.
        유전, 환경, 영양결핍 등이 원인입니다. 탈모증은 아쉽게도 특별한 치료법이 없습니다. 평소에 앵무새에게 좋은 환경을 마련해주고 근친번식을 피하는 것이 중요합니다.</string>
    <string name="parrot_info13">식모증: 주로 지능이 높은 앵무새들에게 많이 나타납니다. 부리로 털을 뽑는 모습을 보입니다. 스트레스, 영양결핍, 애정결핍 등이 원인입니다. 회색앵무나 유황앵무처럼 머리가 좋은 앵무새들의 경우 주인의 관심을 끌기 위해 이런 행동을 합니다. 이때 주인이 털을 뽑는 행위 자체에 관심을 가져주는 모습을 보이면
        앵무새는 관심을 더 받기 위해 이 행동을 더 심하게 반복하게 됩니다. 따라서 털을 뽑는 행위를 할 경우 단호하게 혼내고 못하도록 하는게 중요하며 목에다 두꺼운 종이로 목 타래를 둥글게 만들어서 씌어주어 털을 뽑는 것을 원천적으로 못하게 해야합니다.
        또한 영양공급을 균형있게 하고 앵무새에게 평소에도 많은 관심과 사랑을 주며 키워야 하며 넓은 새장을 사용하여 스트레스를 방지해야합니다.</string>
    <string name="parrot_info14">각약증: 발가락이 꼬부라져있거나 빳빳이 펴져있어 잘 걸을 수 없는 증상을 보입니다. 비타민 B복합체, 비타민D, 칼슘 부족이 원인입니다. 치료는 환부를 바른 자세로 만들고 깁스를 하며 영양제를 물에 타서 먹이는 것으로 이뤄집니다.</string>
    <string name="parrot_info15">갑상선 질환: 거친 숨을 쉬거나 괴로운 소리를 내며 새의 목구멍 양쪽이 부어있는 모습을 보입니다. 사람의 갑상선 질환과 마찬가지로 영양 성분 중 요오드부족이 원인입니다. 치료는 물30cc에 요오드 한방울을 섞어 먹이는 것으로 이뤄집니다.</string>
    <string name="parrot_info16">육종: 종양의 일종.사마귀 같은 것이 눈 주위, 부리주위, 날개등에 생깁니다. 근본적인 원인에 대해서는 알려져 있지 않으며 동물병원에 방문해서 수술을 해야합니다.</string>
    <string name="parrot_info17">카나리아두: 눈 주위,부리주위,목등에 흰 부스럼이 생기고 깃털을 부풀리고 거친 숨을 쉬는 증상을 보입니다. 전염성 바이러스가 원인이며 항바이러스제가 없기 때문에 치료방법이 없습니다. 따라서 다른 새와 같이 기르는 경우 아픈 앵무새를 격리시키고 동물병원에 데려가도록 합니다.</string>
    <string name="parrot_info18">앵무새병: 깃털을 부풀림, 녹색설사, 콧물과 같은 증상을 보입니다. 앵무새병을 일으키는 클라미디아 세균에게 감염되어 생기는 질병으로 앵무새 외에도 다른 종류의 새에게도 전염되며 인수공통전염병이라 사람에게 전염될 수도 있습니다. 사람에게 전염될 경우 심각한 폐렴을 일으킬 수 있으므로 아픈 새를
        격리하고 접촉할 때 각별히 주의해야합니다. 치료는 오레오마이신, 테트라사이클린 등의 항생제를 물에 녹여서 투여하도록 합니다. 또한 동물병원에 데려가서 진료를 받는 것도 중요합니다.</string>
    <string name="parrot_info19">신경증: 새가 새장 바닥에 떨어져서 발작이나 심한 경련을 일으키며 증상이 심한 경우 죽을 수도 있습니다. 곰팡이균인 아스페르길루스균이나 세균인 살모넬라균등에 감염되어 이런 균들이 뇌를 침투하해서 생기거나 뇌종양으로 인해 생기기도 합니다. 불치병이라 딱히 치료방법은 없습니다.</string>
    <string name="parrot_info20">골절: 부서진 곳을 제대로 펴지 못하거나 제대로 걸어다니지 못하며 골절부위가 뭔가와 접촉할 때 굉장히 괴로워하는 증상을 보입니다. 응급처치로 성냥개비를 부목으로 사용하여 테입을 감아줍니다. 또한 딱딱한 종이나 반창고를 사용하여 튼튼히 고정시켜 감아줍니다.
        골절치료는 전문적인 분야이기 때문에 수의사에게 의뢰하는 것이 바람직합니다.</string>
    <string name="parrot_info21">새 벼룩: 새가 분주하게 움직인다. 날개를 퍼득이는 모습을 보입니다. 밤에 특히 심한데 야행성인 새 벼룩이 밤에 새에게 달라붙어 괴롭히기 때문입니다. 새장을 구입할 때 주로 묻어서 들어오거나 간혹 가다가 외부에서 유입되기도 합니다.
        벼룩이 새장에 숨어있기 때문에 벼룩이 새로부터 떨어져있는 낮에 새를 다른 새장으로 옮깁니다. 그 후 새장을 열탕소독하고 새 벼룩의 구제약품인 PGP로 새 벼룩을 퇴치합니다.</string>
    <string name="parrot_info22">새 응애: 새가 몹시 가려워하고 자주 긁는 모습을 보입니다. 그다지 치명적이지는 않지만 방치하면 새가 식욕을 잃어 영양실조가 되기 쉽습니다. 진드기의 일종인 응애가 새에게 기생해서 생깁니다.
        치료는 제충국의 분말을 새의 날개 속같은 곳에 비벼 넣은 후 조금 후에 털어내어 응애가 떨어져 나오게 하도록 합니다. 그리고 수욕을 시킨 후 분말을 물에 타서 씻어주고 며칠 후 다시 한 번 실시합니다.</string>
    <string name="parrot_info23">새 빈대: 새 벼룩의 증상과 거의 비슷한데 어린 새의 경우 몹시 괴로워하는 모습을 보입니다. 집에 사는 빈대가 새장에 옮겨가서 발병하며 새 벼룩의 구제방법과 동일합니다.</string>
    <string name="parrot_info24">안검염: 붉은 반점과 결막의 염증성 부종이 증상으로 나타납니다. 외상, 자격, 세균, 바이러스 등이 원인입니다. 치료는 외상이나 자격에 의한 안검염은 안연고와 항생제를 근육주사하여 치료하도록 합니다.
        세균성이나 바이러스성 안검염은 치료가 어려우므로 동물병원에 방문하도록 합니다.</string>
    <string name="parrot_info25">결막염: 눈꺼풀이 두꺼워지고 눈에서 분비물같은 것이 나오는 증상을 보입니다. 심하면 눈꺼풀이 달라붙습니다. 세균이나 바이러스가 원인입니다. 치료는 안약을 투여하거나 항생제를 주사하도록 합니다.</string>
    <string name="parrot_info26">안구건조증: 눈꼽이 끼고 눈꺼풀이 부어 오르며 잠행성 결막염과 각막궤양이 생기는 증상을 보입니다. 비타민A의 결핍이 원인이므로 비타민 A보충제를 앵무새에게 주면 괜찮아집니다.</string>
    <string name="reptile_info1">임팩션: 모래나 흙, 기타 이물질을 먹었을 때 배탈이 나는 증상으로는 먹이를 먹지 않고 소화 및 배설장애를 일으킵니다. 증세가 심하면 죽음에도 이를 수 있으므로 주의해야 합니다.
어린 개체는 바닥재로 파충류전용 카펫을 사용하는 것이 권장되며, 가급적 입자가 큰 렙티바크 등 쉽게 삼키지 못하는 재료를 사용하여 예방하도록 합니다.</string>
    <string name="reptile_info2">마우스락: 파충류의 입 속에 염증이 생기는 구강염입니다. 입주변이 부어오를 수 있고 심하면 고름과 피가 날 수 있으며, 이빨이 빠질 수도 있습니다.
입 주변이 부어오르고 모양이 변하거나 별다른 이유가 없는데 먹이를 먹지 않는다면 의심해 봐야합니다. 치료는 입안을 살펴보고 염증부위를 요오드나 과산화수소를 물과 1:1로 섞어서 면봉에 묻혀 닦아주도록 합니다.
 이 질병으로 인해 먹이를 먹지 않는다면 강제로 입을 벌리고 먹이를 공급하는 포스피딩을 해 줘야합니다.</string>
    <string name="reptile_info3">감기: 파충류도 사람이나 조류와 마찬가지로 감기에 걸리 수 있으며 주로 적절치 못한 온도변화가 원인입니다. 콧물을 흘리며 활동량이 적어지고 거식을 하는 등의 증상을 보입니다.
파충류의 감기치료제인 세라브론치퍼를 먹이에 섞어서 3일간 먹입니다.</string>
    <string name="reptile_info4">MBD(뼈 발육부진 질환): 뼈가 말랑해져서 휘어지고, 부러지기도 쉬워지며 턱도 부드러워져서 아구가 맞지 않게 되고 성장도 정상적으로 안됩니다. 움직임도 둔해지고 스스로도 스트레스로 인해 거식을 보이기도 하며 각종 합병증도 따라 올 수 있는 위험한 질병입니다.
모든 파충류에게서 나타날 수 있으며 굉장히 복잡한 이유로 발생합니다. 밝혀진 원인으로는 체내 칼슘 또는 비타민 D가 지나치게 낮은 반면 인 수치는 지나치게 높은 경우, 자외선 B 파장에 부적절하게 노출되어 비타민 D 생성과 칼슘 대사작용이 저해된 경우가 있습니다.
치료는 거북이나 주행성도마뱀의 경우 자연채광을 충분히 받지 못한다면 반드시 UVB등을 하루 12시간 쪼여주도록 하며 이와 함께 칼슘제를 먹이에 섞어서 주거나 별도의 그릇에 담아서 사육장에 넣어주도록 합니다.
UVB일광욕과 칼슘은 건강한 개체라도 어릴 때 부터 예방차원 에서 반드시 공급해 주는 것이 좋습니다. 하지만 야행성도마뱀의 경우에는 UVB일광욕이 필요없고 칼슘제만 먹이면 됩니다.</string>
    <string name="reptile_info5">설사: 평소에 비해 묽거나 끈적끈적한 변을 보입니다. 파충류는 습기가 포함된 묽은 똥을 싸는것이 정상이지만 낮은 기온이나 차가운 물이나 상한 음식의 섭취, 혹은 지저분한 사육장 환경등의 이유로 설사를 하게 됩니다.
치료는 온도를 즉각 30정도로 올려주고 설사치료제인 세라디로퍼R을 먹이에 섞어 3일간 투여하도록 합니다.</string>
    <string name="reptile_info6">곰팡이 질환: 점차적으로 식욕이 저하되고 체중이 감소되는 모습을 보입니다. 어느 부분에 곰팡이가 감염되느냐에 따라서 증상은 다르게 나타납니다. 곰팡이 질환은 과한 습도나 저온, 타 질환으로 인해 면역능력이 저하된 상태, 스트레서, 영양 불균형, 상처, 비위생적
환경등에 의해 발생합니다. 치료는 항진균제를 사용하도록 하며 감염부위를 외과적인 수술로 절제하기도 합니다. 곰팡이 질환으로 인한 증상의 완전한 회복은 드문 편입니다.</string>
    <string name="reptile_info7">크리토스포리디어시증: 구토, 설사, 식욕저하, 체중감소, 허약, 위장과 내막이 두꺼워 지는 등의 증상을 보입니다. 파충류의 질환 중에 가장 심각한 문제를 일으키는 질환 중 하나입니다. 원인은 크리토스포리디움이라는 원생동믈에 의해 감염되어 생깁니다. 이 원생동물에
감염된 동물이나 그 동물의 변과 접촉하거나 감염된 음식에 의해 전염됩니다. 불행히도 이 질병에 대한 치료법은 없습니다. </string>
    <string name="reptile_info8">허피스바이러스 감염증: 간 비대, 소화 불량, 구내 통증, 입이나 눈에서 나오는 비정상적 분비물등의 증상을 보입니다. 또한 입안에 있는 점막의 세포가 죽어서 입안이 하얗게 된 것을 보고 쉽게 허피스바이러스 감염증임을 알 수 있습니다.
원인은 허피스바이러스에 의해 감염되어 생기며 치료는 보통 항바이러스를 투여하는 것으로 끝이나 구내 통증이 심한 경우는 연고를 주거나 다른 장기의 문제가 있을 경우에는 따로 약을 먹이기도 합니다.</string>
    <string name="choongbook_add">충북 청주시 서원구 충대로 1 충북대학교 수의과대학 동물의료센터</string>
    <string name="choongbook">충북대학교동물병원</string>
    <string name="ain_add">충북 청주시 흥덕구 진재로 41 풍년빌딩 1층</string>
    <string name="ain">아인동물의료센터</string>
    <string name="soo_add">충북 청주시 서원구 모충로3번길 81 한진신세대아파트 상가 108호</string>
    <string name="soo">수동물병원</string>
    <string name="any_add">충남 천안시 동남구 터미널2로 8</string>
    <string name="any">에니펫동물병원</string>
    <string name="gor_add">충남 천안시 동남구 중앙로 281-2 승지빌딩</string>
    <string name="gor">고려동물병원</string>
    <string name="dasom_add">충남 천안시 동남구 수곡2길 8-3 이화빌딩</string>
    <string name="dasom">다솜동물병원</string>
    <string name="sinhwa_add">충남 서산시 안견로 247-1</string>
    <string name="sinhwa">신화동물병원</string>
    <string name="seogor_add">충남 서산시 안견로 263</string>
    <string name="seogor">고려동물병원</string>
</resources>