<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Background"
    tools:context=".ChoongchungActivity">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="FULL_BANNER"
        app:adUnitId="ca-app-pub-4756367925005641/3903877371"></com.google.android.gms.ads.AdView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/chungju"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="청주시"
                android:textColor="@color/black"
                android:textSize="27dp"
                android:fontFamily="@font/kotra_bold"/>

            <Button
                android:id="@+id/soo_vet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/my_button"
                android:fontFamily="@font/kotra_bold"
                android:foreground="?selectableItemBackground"
                android:text="@string/soo"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:backgroundTint="@color/Button_color" />

            <TextView
                android:id="@+id/soo_vet_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/soo_add" />

            <Button
                android:id="@+id/choongbook_vet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/my_button"
                android:fontFamily="@font/kotra_bold"
                android:foreground="?selectableItemBackground"
                android:text="@string/choongbook"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:backgroundTint="@color/Button_color" />

            <TextView
                android:id="@+id/choongbook_vet_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/choongbook_add" />

            <Button
                android:id="@+id/ain_vet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/my_button"
                android:fontFamily="@font/kotra_bold"
                android:foreground="?selectableItemBackground"
                android:text="@string/ain"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:backgroundTint="@color/Button_color" />

            <TextView
                android:id="@+id/ain_vet_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/ain_add" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3px"
                android:background="@color/Background2" />

            <TextView
                android:id="@+id/chunan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="천안시"
                android:textColor="@color/black"
                android:textSize="27dp"
                android:fontFamily="@font/kotra_bold"/>

            <Button
                android:id="@+id/any_vet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/my_button"
                android:fontFamily="@font/kotra_bold"
                android:foreground="?selectableItemBackground"
                android:text="@string/any"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:backgroundTint="@color/Button_color" />

            <TextView
                android:id="@+id/any_vet_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/any_add" />

            <Button
                android:id="@+id/gor_vet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/my_button"
                android:fontFamily="@font/kotra_bold"
                android:foreground="?selectableItemBackground"
                android:text="@string/gor"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:backgroundTint="@color/Button_color" />

            <TextView
                android:id="@+id/gor_vet_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/gor_add" />

            <Button
                android:id="@+id/dasom_vet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/my_button"
                android:fontFamily="@font/kotra_bold"
                android:foreground="?selectableItemBackground"
                android:text="@string/dasom"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:backgroundTint="@color/Button_color" />

            <TextView
                android:id="@+id/dasom_vet_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/dasom_add" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3px"
                android:background="@color/Background2" />

            <TextView
                android:id="@+id/seosan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="서산시"
                android:textColor="@color/black"
                android:textSize="27dp"
                android:fontFamily="@font/kotra_bold"/>

            <Button
                android:id="@+id/sinhwa_vet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/my_button"
                android:fontFamily="@font/kotra_bold"
                android:foreground="?selectableItemBackground"
                android:text="@string/sinhwa"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:backgroundTint="@color/Button_color" />

            <TextView
                android:id="@+id/sinhwa_vet_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/sinhwa_add" />

            <Button
                android:id="@+id/seogor_vet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/my_button"
                android:fontFamily="@font/kotra_bold"
                android:foreground="?selectableItemBackground"
                android:text="@string/seogor"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:backgroundTint="@color/Button_color" />

            <TextView
                android:id="@+id/seogor_vet_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/seogor_add" />

            <Button
                        android:id="@+id/choongchung_back_to_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/my_button"
                        android:fontFamily="@font/kotra_bold"
                        android:text="@string/back"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        app:backgroundTint="@color/Button_color"
                        android:foreground="?selectableItemBackground" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>