<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Background2"
    tools:context=".HelpPopupActivity">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="FULL_BANNER"
        app:adUnitId="ca-app-pub-4756367925005641/2870917179"></com.google.android.gms.ads.AdView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/help"
                android:textSize="30dp"
                android:textColor="@color/black"
                android:fontFamily="@font/kotra_bold"/>

            <TextView
                android:id="@+id/text_help2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/click"
                android:textSize="16dp"
                android:textColor="@color/gray"
                android:fontFamily="@font/kotra_bold"/>

            <TextView
                android:id="@+id/animaldoctor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/animaldoctor"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginLeft="5dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:background="@color/Background" />

            <TextView
                android:id="@+id/petzzi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/petzzi"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginLeft="5dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:background="@color/Background" />

            <TextView
                android:id="@+id/notepet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/notepet"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginLeft="5dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:background="@color/Background" />

            <TextView
                android:id="@+id/dailyvet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/dailyvet"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginLeft="5dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:background="@color/Background" />

            <TextView
                android:id="@+id/birdpalace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/birdpalace"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginLeft="5dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:background="@color/Background" />

            <TextView
                android:id="@+id/parrotcom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/parrotcom"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginLeft="5dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:background="@color/Background" />

            <TextView
                android:id="@+id/engsamo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/engsamo"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginLeft="5dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:background="@color/Background" />

            <TextView
                android:id="@+id/parrotkingdom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/parrotkingdom"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginLeft="5dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:background="@color/Background" />

            <TextView
                android:id="@+id/thezoo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/thezoo"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginLeft="5dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:background="@color/Background" />

            <TextView
                android:id="@+id/korrep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/korrep"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginLeft="5dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:background="@color/Background" />

            <TextView
                android:id="@+id/psamo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/psamo"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginLeft="5dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:background="@color/Background" />

            <TextView
                android:id="@+id/thezoocafe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/thezoocafe"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginLeft="5dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:background="@color/Background" />

            <TextView
                android:id="@+id/hamsterstory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/hamsterstory"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginLeft="5dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:background="@color/Background" />

            <TextView
                android:id="@+id/hamsamo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/hamsamo"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginLeft="5dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:background="@color/Background" />

            <TextView
                android:id="@+id/hedge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/hedge"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginLeft="5dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:background="@color/Background" />

            <TextView
                android:id="@+id/gisamo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:text="@string/gisamo"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginLeft="5dp"/>

            <Button
                android:id="@+id/back_to_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/my_button"
                android:fontFamily="@font/kotra_bold"
                android:foreground="?selectableItemBackground"
                android:text="@string/back"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:backgroundTint="@color/Button_color" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>